# AdventOfCode23

./: .RData  .Rhistory  .gitignore  Cargo.toml  README.md  bkp  dhat-heap.json  out  rustc-ice-2023-12-13T00_35_37-3527.txt  rustc-ice-2023-12-13T00_35_37-3528.txt  rustc-ice-2023-12-13T00_36_00-3591.txt  rustc-ice-2023-12-13T00_36_00-3592.txt  rustc-ice-2023-12-13T00_36_12-3602.txt  rustc-ice-2023-12-13T00_36_12-3603.txt  rustc-ice-2023-12-13T00_37_51-3623.txt  rustc-ice-2023-12-13T00_37_51-3624.txt  rustc-ice-2023-12-13T00_37_53-3635.txt  rustc-ice-2023-12-13T00_37_53-3636.txt  rustc-ice-2023-12-13T00_38_20-3646.txt  rustc-ice-2023-12-13T00_38_20-3647.txt  rustc-ice-2023-12-13T00_38_50-3658.txt  rustc-ice-2023-12-13T00_38_50-3659.txt  rustc-ice-2023-12-13T00_38_53-3670.txt  rustc-ice-2023-12-13T00_38_53-3671.txt  rustc-ice-2023-12-13T00_39_03-3692.txt  rustc-ice-2023-12-13T00_39_03-3693.txt  rustc-ice-2023-12-13T00_41_03-4090.txt  rustc-ice-2023-12-13T00_41_03-4091.txt  rustc-ice-2023-12-13T00_41_15-4116.txt  rustc-ice-2023-12-13T00_41_15-4117.txt  rustc-ice-2023-12-13T00_41_36-4156.txt  rustc-ice-2023-12-13T00_41_36-4157.txt  rustc-ice-2023-12-13T00_42_17-4180.txt  rustc-ice-2023-12-13T00_42_17-4181.txt  rustc-ice-2023-12-13T00_42_44-4193.txt  rustc-ice-2023-12-13T00_42_44-4194.txt  rustc-ice-2023-12-13T00_42_53-4204.txt  rustc-ice-2023-12-13T00_42_53-4205.txt  rustc-ice-2023-12-13T00_44_55-4240.txt  rustc-ice-2023-12-13T00_44_55-4241.txt  (+29 more)
benches/: bench.rs
inputs/: day11.txt  day20b_test.txt  day21.txt  day21_test2.txt  day21b_test.txt
src/: day10a.rs  day10b.rs  (+55 more)
(+306 files in other folders)
