[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
colored = "2.1.0"
criterion = "0.5.1"
dhat = "0.3.2"
indicatif = "0.17.7"
itertools = "0.12.0"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"

[[bench]]
name = "bench"
harness = false

[features]
dhat-heap = []


[profile.max]
inherits = "release"
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true

[profile.dhat]
inherits = "release"
debug = true
