[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas-src = { version = "0.9.0", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
bitvec = "1.0.1"
colored = "2.1.0"
criterion = "0.5.1"
dhat = "0.3.2"
indicatif = "0.17.7"
itertools = "0.12.0"
ndarray = { version = "0.15.6", features = ["blas"] }
ndarray-linalg = "0.16.0"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"
smallvec = "1.11.2"

[build]
rustflags = ["-C", "target-cpu=native"]

[[bench]]
name = "bench"
harness = false

[features]
dhat-heap = []


[profile.max]
inherits = "release"
codegen-units = 1
lto = true
panic = "abort"

[profile.bench]
inherits = "max"

[profile.dhat]
inherits = "release"
debug = true
